--- a/config/my_controllers.yaml
+++ b/config/my_controllers.yaml
@@ -1,7 +1,7 @@
 controller_manager:
   ros__parameters:
     update_rate: 30
-    # use_sim_time: true
+    use_sim_time: true
 
     diff_cont:
       type: diff_drive_controller/DiffDriveController
@@ -14,12 +14,12 @@ diff_cont:
 
     publish_rate: 50.0
 
-    base_frame_id: dummy
+    base_frame_id: base_link
 
-    # left_wheel_names: ['wheel2_joint','wheel4_joint']
-    # right_wheel_names: ['wheel1_joint','wheel3_joint']
-    left_wheel_names: ['wheel2_joint']
-    right_wheel_names: ['wheel1_joint']
+    left_wheel_names: ['wheel2_joint','wheel4_joint']
+    right_wheel_names: ['wheel1_joint','wheel3_joint']
+    # left_wheel_names: ['wheel2_joint']
+    # right_wheel_names: ['wheel1_joint']
     wheel_separation: 0.42826
     wheel_radius: 0.0762
 
